# entity-core-rust

./: .dockerignore  .gitignore  AGENTS.md  CANONICAL-DOCS.toml  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml
bindings/: README.md
bindings/ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
bindings/ffi/include/: entity_core_ffi.h
bindings/ffi/src/: crypto.rs  ecf.rs  entity.rs  error.rs  handles.rs  hash.rs  lib.rs  peer.rs  types.rs  wire.rs
bindings/godot/: Cargo.toml  README.md  entity_core.gdextension
bindings/godot/src/: bootstrap_ops.rs  cbor_util.rs  compute_ops.rs  entity_resource.rs  entity_subscription.rs  lib.rs  peer_manager_node.rs  peer_node.rs  peer_op_future.rs  persistence.rs  shell_node.rs
bindings/sdk/: Cargo.toml  README.md
bindings/sdk/src/: attestation.rs  clock.rs  compute.rs  continuation.rs  cross_peer_cap.rs  identity.rs  identity_bootstrap.rs  identity_bundle.rs  inspect.rs  lib.rs  peer_manager.rs  quorum.rs  reconcile.rs  register_handler.rs  revision.rs  role.rs  sdk.rs  subscription.rs
bindings/shell/: Cargo.toml
bindings/shell/src/: action.rs  alias.rs  binding.rs  dispatcher.rs  display.rs  format.rs  lib.rs  path.rs  result.rs  runtime.rs  shell.rs  sink.rs
bindings/shell/src/verbs/: bootstrap.rs  cat.rs  cd.rs  compute.rs  connect.rs  count.rs  disconnect.rs  exec.rs  help.rs  info.rs  inspect.rs  ls.rs  mod.rs  open.rs  peer.rs  put.rs  pwd.rs  query.rs  rm.rs  tail.rs  tree.rs
bindings/wasm-worker-example/: Cargo.toml  README.md
bindings/wasm-worker-example/src/: lib.rs
bindings/wasm-worker-host/: Cargo.toml
bindings/wasm-worker-host/src/: lib.rs
bindings/wasm-worker-protocol/: CONTRIBUTING.md  Cargo.toml
bindings/wasm-worker-protocol/src/: conversions.rs  lib.rs
bindings/wasm-worker-proxy/: Cargo.toml
bindings/wasm-worker-proxy/src/: broker.rs  lib.rs  web_transport.rs
cmd/entity-peer/: Cargo.toml
cmd/entity-peer/src/: config.rs  main.rs
cmd/entity-peer/src/commands/: identity.rs  mod.rs  peer.rs
cmd/wire-conformance/: Cargo.toml
cmd/wire-conformance/src/: main.rs
conformance/: MANIFEST.md  vectors-v1.cbor
core/capability/: Cargo.toml
core/capability/src/: lib.rs  mint.rs
core/crypto/: Cargo.toml
core/crypto/src/: lib.rs
core/ecf/: Cargo.toml
core/ecf/src/: encoder.rs  lib.rs  value.rs
core/entity/: Cargo.toml
core/entity-core/: Cargo.toml
core/entity-core/src/: lib.rs
core/entity/src/: lib.rs
core/handler/: Cargo.toml
core/handler/src/: lib.rs
core/hash/: Cargo.toml
core/hash/src/: lib.rs
core/hash/tests/: cross_impl_fixture.rs
core/peer/: Cargo.toml
core/peer/src/: connection.rs  http_connection.rs  http_live.rs  ingest.rs  lib.rs  published_root.rs  relay_forwarder.rs  remote.rs  runtime.rs  server.rs  session_entity.rs  transport.rs  transport_profile.rs
core/peer/src/http_live/: scope.rs
core/peer/tests/: cohort_compare_v767_phase1.rs  cohort_compare_v767_phase2.rs  http_live.rs  peer_canon_v7_65.rs  peer_canon_v7_66.rs  peer_canon_v7_67_phase1.rs  peer_canon_v7_69.rs  publish_fetch_http_poll.rs  restart.rs
core/protocol/: Cargo.toml
core/protocol/src/: connect.rs  lib.rs  response.rs  verify.rs
core/protocol/tests/: multisig.rs
core/store/: Cargo.toml
core/store/src/: idb.rs  lib.rs  opfs.rs  persist.rs  sqlite.rs  test_suite.rs
core/store/tests/: idb_browser.rs
core/tree/: Cargo.toml
core/tree/src/: lib.rs  root_tracker.rs  trie.rs
core/types/: Cargo.toml
core/types/src/: core_types.rs  lib.rs
core/wire/: Cargo.toml
core/wire/src/: lib.rs
docs/: ARCHITECTURE-WASM-AND-TRANSPORT.md  ARCHITECTURE.md  BACKLOG.md  CLI.md  SPEC-AMBIGUITIES-ROLE.md  SPEC-AMBIGUITIES.md
docs/status/: STATUS.md
extensions/attestation/: Cargo.toml
extensions/attestation/src/: data.rs  handler.rs  helpers.rs  hook.rs  index.rs  lib.rs  tests.rs
extensions/capability/: Cargo.toml
extensions/capability/src/: lib.rs  tests.rs
extensions/clock/: Cargo.toml
extensions/clock/src/: engine.rs  lib.rs
extensions/compute/: Cargo.toml
extensions/compute/src/: builtins.rs  engine.rs  lib.rs  memo.rs  resolve.rs  types.rs  walker.rs
extensions/compute/src/eval/: apply.rs  construct.rs  control.rs  lookup.rs  mod.rs  ops.rs  scope.rs  tests.rs
extensions/conformance/: Cargo.toml
extensions/conformance/src/: lib.rs
extensions/content/: Cargo.toml
extensions/content/src/: chunker.rs  closure.rs  fastcdc.rs  handler.rs  lib.rs  miss_hook.rs  verify.rs
extensions/content/tests/: closure_integration.rs  handler_integration.rs
extensions/continuation/: Cargo.toml
extensions/continuation/src/: lib.rs
extensions/discovery/: Cargo.toml
extensions/discovery/src/: backend.rs  data.rs  handler.rs  lib.rs  mdns.rs  result.rs  tests.rs
extensions/durability/: Cargo.toml
extensions/durability/src/: lib.rs
extensions/encryption/: Cargo.toml
extensions/encryption/src/: aad.rs  aead.rs  ecdh.rs  group.rs  kat.rs  kdf.rs  keybackup.rs  lib.rs  lifecycle.rs  peer.rs  registry.rs  self_mode.rs  separation.rs  types.rs  wrapper.rs
extensions/encryption/tests/: aad_vectors.rs  conformance.rs  lifecycle.rs  modes.rs
extensions/handler-ops/: Cargo.toml
extensions/handler-ops/src/: lib.rs
extensions/history/: Cargo.toml
extensions/history/src/: engine.rs  lib.rs
extensions/identity/: Cargo.toml
extensions/identity/src/: attestation_store.rs  data.rs  handler.rs  kinds.rs  lib.rs  paths.rs  tests.rs  validation.rs
extensions/inbox/: Cargo.toml
extensions/inbox/src/: lib.rs
extensions/local-files/: Cargo.toml
extensions/local-files/src/: atomic.rs  config.rs  domain_types.rs  (+7 more)
extensions/query/: Cargo.toml
extensions/quorum/: Cargo.toml
extensions/registry/: Cargo.toml
extensions/relay/: Cargo.toml
extensions/revision/: Cargo.toml
extensions/role/: Cargo.toml
extensions/route/: Cargo.toml
extensions/storage-substitute-http/: Cargo.toml
extensions/storage-substitute-sources/: Cargo.toml
extensions/subscription/: Cargo.toml
extensions/type-system/: Cargo.toml
test-vectors/v1/: emit-rust.cbor
(+73 files in other folders)
