[package]
name = "entity-core-ffi"
version = "0.8.0"
edition.workspace = true
description = "C FFI bindings for Entity Core Protocol"

[lib]
crate-type = ["cdylib"]

[dependencies]
entity-ecf.workspace = true
entity-hash.workspace = true
entity-entity.workspace = true
entity-crypto.workspace = true
entity-wire.workspace = true
entity-store.workspace = true
entity-handler.workspace = true
entity-peer.workspace = true
ciborium.workspace = true
tokio.workspace = true
cbor-diag = "0.1"

[build-dependencies]
cbindgen = "0.27"
