[package]
name = "entity-wasm-worker-example"
version = "0.8.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference wasm binary: minimal skeleton showing how to host an entity-core peer inside a dedicated Web Worker. Consumers copy and adapt; this crate itself ships nothing to production."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
entity-wasm-worker-host = { path = "../wasm-worker-host" }
wasm-bindgen = "0.2"
