[package]
name = "entity-capability"
version = "0.8.0"
edition.workspace = true
description = "Capability tokens, grants, pattern matching, scope checking"

[dependencies]
entity-ecf.workspace = true
entity-hash.workspace = true
entity-entity.workspace = true
entity-crypto.workspace = true
entity-types.workspace = true
ciborium.workspace = true
thiserror.workspace = true
