[package]
name = "entity-crypto"
version = "0.8.0"
edition.workspace = true
description = "Ed25519 keypair, PeerID, sign/verify for Entity Core Protocol"

[dependencies]
entity-ecf.workspace = true
entity-hash.workspace = true
entity-entity.workspace = true
ed25519-dalek.workspace = true
ed448-goldilocks = { version = "0.14.0-pre.13", default-features = false, features = ["alloc", "signing"] }
sha2.workspace = true
rand.workspace = true
bs58.workspace = true
base64.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
ciborium.workspace = true
tempfile = "3"
