[package]
name = "entity-entity"
version = "0.8.0"
edition.workspace = true
description = "Entity, Envelope, and URI types for Entity Core Protocol"

[dependencies]
entity-ecf.workspace = true
entity-hash.workspace = true
ciborium.workspace = true
thiserror.workspace = true

[dev-dependencies]
entity-crypto.workspace = true
