[package]
name = "entity-handler"
version = "0.8.0"
edition.workspace = true
description = "Handler trait, registry, context, and dispatch"

[dependencies]
entity-ecf.workspace = true
ciborium.workspace = true
entity-hash.workspace = true
entity-entity.workspace = true
entity-store.workspace = true
entity-types.workspace = true
entity-crypto.workspace = true
entity-capability.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
