[package]
name = "entity-store"
version = "0.8.0"
edition.workspace = true
description = "ContentStore + LocationIndex traits and memory implementation"

[features]
default = []
sqlite = ["dep:rusqlite"]
persist = ["dep:ciborium"]
# OPFS-backed ContentStore + LocationIndex for WASM (worker context).
# Mirrors `persist` structurally: append-only journal + in-memory mirror,
# replayed on open. Sync I/O via FileSystemSyncAccessHandle.
wasm-persist = [
    "dep:ciborium",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
]
# IndexedDB-backed ContentStore + LocationIndex for WASM (main thread or
# worker). Same sync in-memory mirror as OPFS, but the durable substrate is
# an async, write-behind IDB journal instead of a synchronous OPFS append.
# Off by default → default builds and the OPFS path stay byte-identical.
# See `core/store/src/idb.rs`.
wasm-idb-persist = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
    "dep:gloo-timers",
    "dep:futures-channel",
]

[dependencies]
entity-hash.workspace = true
entity-entity.workspace = true
thiserror.workspace = true
tracing.workspace = true
rusqlite = { workspace = true, optional = true }
ciborium = { workspace = true, optional = true }

# wasm-persist / wasm-idb-persist deps — WASM-only target, optional,
# feature-gated above.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
gloo-timers = { version = "0.3", optional = true, features = ["futures"] }
futures-channel = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Navigator",
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemSyncAccessHandle",
    "FileSystemGetFileOptions",
    "FileSystemGetDirectoryOptions",
    "FileSystemReadWriteOptions",
    "WorkerGlobalScope",
    "WorkerNavigator",
    # --- IndexedDB (wasm-idb-persist) ---
    "IdbFactory",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbDatabase",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbObjectStore",
    "IdbVersionChangeEvent",
    "DomException",
    "Event",
    "EventTarget",
] }

[dev-dependencies]
entity-ecf.workspace = true
ciborium = { workspace = true }

# Native-only dev-deps. `rusqlite` (the SQLite test suite) does not build for
# wasm32 — keep it off-target so the IDB browser tests can compile.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
rusqlite = { workspace = true }

# Real-browser tests for the IndexedDB backend (wasm-idb-persist). Native
# `cargo test` never touches these; run via wasm-bindgen-test in a browser.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
