[package]
name = "entity-capability-handler"
version = "0.8.0"
edition.workspace = true
description = "system/capability handler — request, delegate, revoke (V7 §6.2)"

[dependencies]
entity-ecf.workspace = true
entity-hash.workspace = true
entity-entity.workspace = true
entity-store.workspace = true
entity-handler.workspace = true
entity-capability.workspace = true
entity-crypto.workspace = true
entity-types.workspace = true
async-trait.workspace = true
ciborium.workspace = true
thiserror.workspace = true
tracing.workspace = true
web-time = "1.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
