[package]
name = "entity-compute"
version = "0.8.0"
edition.workspace = true
description = "system/compute handler + compute engine — expression evaluation and reactive mode"

[dependencies]
entity-ecf.workspace = true
entity-hash.workspace = true
entity-entity.workspace = true
entity-store.workspace = true
entity-handler.workspace = true
entity-capability.workspace = true
entity-protocol.workspace = true
async-trait.workspace = true
ciborium.workspace = true
sha2.workspace = true
data-encoding.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["sync"] }
tracing.workspace = true
web-time = "1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time"] }
stacker = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
