[package]
name = "entity-conformance"
version = "0.8.0"
edition.workspace = true
description = "GUIDE-CONFORMANCE §7a wire-gate scaffolding handlers (system/validate/*) — runtime opt-in, NOT core protocol"

[dependencies]
entity-ecf.workspace = true
entity-hash.workspace = true
entity-entity.workspace = true
entity-wire.workspace = true
entity-handler.workspace = true
entity-types.workspace = true
async-trait.workspace = true
ciborium.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
