[package]
name = "entity-content"
version = "0.8.0"
edition.workspace = true
description = "EXTENSION-CONTENT v3.5 — blob/chunk/descriptor types + chunkers + system/content handler"

[dependencies]
entity-ecf.workspace = true
entity-hash.workspace = true
entity-entity.workspace = true
entity-types.workspace = true
entity-handler.workspace = true
entity-capability.workspace = true
entity-store.workspace = true
async-trait.workspace = true
ciborium.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
