[package]
name = "entity-continuation"
version = "0.8.0"
edition.workspace = true
description = "system/continuation handler — forward, join, suspend/resume/abandon"

[dependencies]
entity-ecf.workspace = true
entity-hash.workspace = true
entity-entity.workspace = true
entity-store.workspace = true
entity-handler.workspace = true
entity-capability.workspace = true
entity-protocol.workspace = true
entity-types.workspace = true
async-trait.workspace = true
ciborium.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { version = "1", features = ["sync"] }
# WASM-safe wall clock for the §3.4 lost-error marker timestamp
# (std::time::SystemTime panics on wasm32 — CLAUDE.md WASM guidance).
web-time = "1.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
entity-crypto.workspace = true
